@@ -48,6 +48,10 @@ stated otherwise, all values are strings.
 ``[tool.sip.builder]`` Section
 ------------------------------
 
+Unless stated otherwise, the values of all string and list options may contain
+environment markers as defined in `PEP 508
+<https://www.python.org/dev/peps/pep-0508/>`__.
+
 The SIP build system does not define any key/values in this section but build
 system extensions may do so.
 
@@ -76,7 +80,9 @@ Note that SIP does not check the validity of the key/values in this section.
 ------------------------------
 
 The key/values in this section apply to the project as a whole.  Unless stated
-otherwise, all values are strings.
+otherwise, all values are strings.  Unless stated otherwise, the values of all
+string and list options may contain environment markers as defined in `PEP 508
+<https://www.python.org/dev/peps/pep-0508/>`__.
 
 **abi-version**
     The value is the version number of the ABI of the :mod:`sip` module being
@@ -91,7 +97,8 @@ otherwise, all values are strings.
     The value is a callable that will return an object that is a sub-class
     of :class:`~sipbuild.Bindings`.  The default bindings factory is
     :class:`~sipbuild.Bindings`.  Bindings factories can also be specified
-    programmatically using :attr:`~sipbuild.Project.bindings_factories`.
+    programmatically using :attr:`~sipbuild.Project.bindings_factories`.  The
+    value may not contain environment markers.
 
 **build-dir**
     The value is the name of a directory in which all generated files will be
@@ -106,7 +113,8 @@ otherwise, all values are strings.
 **builder-factory**
     The value is a callable that will return an object that is a sub-class
     of :class:`~sipbuild.AbstractBuilder`.  The default builder factory is
-    :class:`~sipbuild.DistutilsBuilder`.
+    :class:`~sipbuild.DistutilsBuilder`.  The value may not contain environment
+    markers.
 
 **console-scripts**
     The value is a list of entry points that defines one or more console
@@ -206,7 +214,9 @@ defined then SIP will look in the directory containing the
 value of the ``name`` key in the ``[tool.sip.metadata]`` section and, if found,
 will assume that it defines the bindings of a standalone project.
 
-Unless stated otherwise, all values are strings.
+Unless stated otherwise, all values are strings.  Unless stated otherwise, the
+values of all string and list options may contain environment markers as
+defined in `PEP 508 <https://www.python.org/dev/peps/pep-0508/>`__.
 
 **builder-settings**
     The value is a list of values that are passed to the builder.  It is up to
