@@ -5,6 +5,8 @@ v5.1.0 ??? January 2020
   - Added the 'build-tag' project option to specify the build tag to be used in
     the name of a wheel.  sip-wheel has a corresponding '--build-tag' command
     line option.
+  - The values of str and list options in pyproject.toml files can now contain
+    environment markers as defined in PEP 508.
 
 v5.0.1 19th December 2019
   - Bug fixes.
